@@ -29,27 +29,43 @@ public class Engine extends GameEngine {
      */
     @Override
     public int getMove(GameData game) {
+        int enemyLastMove = 0;
+        int myNextMove = 0;
         if (game.gameSequence.isEmpty()) {
-            myMoves.add(gb.getMoveCommon(enemyMoves, movesLeft, myMoves));
-            movesLeft.remove(myMoves.get(myMoves.size() - 1));
+            //This block indicates first move of game.
+            myNextMove = gb.getMoveCommon(enemyMoves, movesLeft, myMoves);
+            myMoves.add(myNextMove);
+            movesLeft.remove(Integer.valueOf(myNextMove));
         } else if (game.gameSequence.size() == 8) {
+            //This block indicates first move of ACHI.
             gb = new AchiBehavior();
-            enemyMoves.add(game.gameSequence.getLast());
-            movesLeft.remove(enemyMoves.get(enemyMoves.size() - 1));
-            myMoves.add(gb.getMoveCommon(enemyMoves, movesLeft, myMoves));
-            movesLeft.set(0, myMoves.get(myMoves.size() - 1));
+            enemyLastMove = game.gameSequence.getLast();
+            enemyMoves.add(enemyLastMove);
+            movesLeft.remove(Integer.valueOf(enemyLastMove));
+            myNextMove = gb.getMoveCommon(enemyMoves, movesLeft, myMoves);
+            myMoves.add(myNextMove);
+            movesLeft.set(0, myNextMove);
         } else if (game.gameSequence.size() > 8) {
+            //This block indicates full ACHI mode.
             gb = new AchiBehavior();
+            enemyMoves.remove(Integer.valueOf(game.gameSequence.getLast()));
+            enemyMoves.add(movesLeft.get(movesLeft.size() - 1));
             movesLeft.set(0, game.gameSequence.getLast());
-            myMoves.add(gb.getMoveCommon(enemyMoves, movesLeft, myMoves));
-            movesLeft.set(0, myMoves.get(myMoves.size() - 1));
+            myNextMove = gb.getMoveCommon(enemyMoves, movesLeft, myMoves);
+            myMoves.remove(Integer.valueOf(myNextMove));
+            myMoves.add(movesLeft.get(movesLeft.size() - 1));
+            movesLeft.set(0, myNextMove);
         } else {
-            enemyMoves.add(game.gameSequence.getLast());
-            movesLeft.remove(enemyMoves.get(enemyMoves.size() - 1));
-            myMoves.add(gb.getMoveCommon(enemyMoves, movesLeft, myMoves));
-            movesLeft.remove(myMoves.get(myMoves.size() - 1));
+            //This block indicates normal mode.
+            enemyLastMove = game.gameSequence.getLast();
+            enemyMoves.add(enemyLastMove);
+            movesLeft.remove(Integer.valueOf(enemyLastMove));
+            myNextMove = gb.getMoveCommon(enemyMoves, movesLeft, myMoves);
+            myMoves.add(myNextMove);
+            movesLeft.remove(Integer.valueOf(myNextMove));
         }
-        System.out.print("Enemy Moves: ");
+        //Debugging code comment block
+        /*System.out.print("Enemy Moves: ");
         enemyMoves.stream().forEach((enemyMove) -> {
             System.out.print(enemyMove + " ");
         });
@@ -59,9 +75,13 @@ public class Engine extends GameEngine {
             System.out.print(myMove + " ");
         }
         System.out.println();
-        System.out.println("This Move: " + myMoves.get(myMoves.size() - 1));
-        //System.out.println(game.gameSequence.contains(myMoves.get(myMoves.size() - 1)));
-        return myMoves.get(myMoves.size() - 1);
+        System.out.print("Moves Left: ");
+        for (Integer myMove : movesLeft) {
+            System.out.print(myMove + " ");
+        }
+        System.out.println();
+        System.out.println("This Move: " + myMoves.get(myMoves.size() - 1));*/
+        return myNextMove;
     }
 
 }
